--- a/产品.html
+++ b/产品.html
@@ -112,7 +112,7 @@ var hashbar_localize = {"dont_show_bar_after_close":"","notification_display_tim
                     <!-- <div style="color: red;">aaa</div> -->
 
 					<div class="menu-menu2-container"><ul id="primary-menu" class="nav-menu"><li id="menu-item-522" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-522">
-                        <a href="./首页.html" >首页</a></li>
+                        <a href="./index.html" >首页</a></li>
 <li id="menu-item-31" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-30 current_page_item current-menu-ancestor current-menu-parent current_page_parent current_page_ancestor menu-item-has-children menu-item-31"><a href="./产品.html">产品</a>
 
 </li>
