--- a/价格.html
+++ b/价格.html
@@ -142,7 +142,7 @@ vertical-align:central;
 			<div class="pull-right">
 				<a href="javascript:;" id="ov-header-menu" class="icon icon-menu pull-right hidden"></a>
 				<nav class="pull-left">
-					<div class="menu-menu2-container"><ul id="primary-menu" class="nav-menu"><li id="menu-item-522" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-522"><a href="./首页.html">首页</a></li>
+					<div class="menu-menu2-container"><ul id="primary-menu" class="nav-menu"><li id="menu-item-522" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-522"><a href="./index.html">首页</a></li>
 <li id="menu-item-31" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-31"><a href="./产品.html">产品</a>
 
 </li>
