--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ var hashbar_localize = {"dont_show_bar_after_close":"","notification_display_tim
 					<form role="search" method="get" class="search-form" action="#">
 				<label>
                      <!-- 注意搜索图标在这 -->
-                     <img src="./../cj/产品_files/icon14.svg" height="25px" width="25px" style="margin-top: 10px; margin-left: -5px;" >
+                     <img src="./产品_files/icon14.svg" height="25px" width="25px" style="margin-top: 10px; margin-left: -5px;" >
 					<span class="screen-reader-text">搜索：</span>
 					<input type="search" class="search-field" placeholder="搜索…" value="" name="s">
 				</label>
